--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,31 @@
 */.metadata/*
 */.settings/*
 */bin/*
+
+*.orig
+
+# C++ objects and libs
+
+*.slo
+*.lo
+*.o
+*.a
+*.la
+*.lai
+*.so
+*.dll
+*.dylib
+
+# Qt-es
+
+*.pro.user
+*.pro.user.*
+moc_*.cpp
+qrc_*.cpp
+ui_*.h
+Makefile*
+*-build-*
+
+# QtCreator
+
+*.autosave
