--- a/src/uCtrlSimulator/package.json
+++ b/src/uCtrlSimulator/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "simulator.js",
   "dependencies": {
-    "mdns2": "~2.1.3"
+    "mdns2": "~2.1.3",
+    "array.prototype.find": "~0.1.1"
   },
   "devDependencies": {
     "nodemon": "~1.0.17"
